kubernetes/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: sre-global-gateway
  namespace: sre-app
spec:
  gatewayClassName: gke-l7-global-external-managed-mc

  addresses:
    - type: NamedAddress
      value: sre-global-gateway-ip

  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
