kubernetes/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sre-observability-route
  namespace: sre-app
spec:
  parentRefs:
    - name: sre-global-gateway

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - group: net.gke.io
          kind: ServiceImport
          name: sre-observability-app
          port: 8080
